--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-normalize": "^1.0.1",
     "react-native-reanimated": "^2.5.0",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
+    "react-native-swiper": "^1.6.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1"
