--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/drawer": "^6.3.3",
@@ -18,12 +19,14 @@
     "@react-navigation/stack": "^6.1.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-normalize": "^1.0.1",
     "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-swiper": "^1.6.0",
+    "react-redux": "^7.2.8",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1"
