--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -213,10 +213,10 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file('nft.keystore')
+            storePassword 'nftnft'
+            keyAlias 'nft'
+            keyPassword 'nftnft'
         }
     }
     buildTypes {
@@ -254,8 +254,9 @@ dependencies {
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
