--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-native": "0.68.0",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-normalize": "^1.0.1",
     "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "^1.6.0",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
