--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.1.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-curved-bottom-bar": "^1.7.4",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-linear-gradient": "^2.5.6",
