--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^6.3.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "native-base": "^3.3.10",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-curved-bottom-bar": "^1.7.4",
