--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -213,10 +213,10 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('nft.keystore')
-            storePassword 'nftnft'
-            keyAlias 'nft'
-            keyPassword 'nftnft'
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
         }
     }
     buildTypes {
