--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^6.3.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "native-base": "^3.3.10",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-curved-bottom-bar": "^1.7.4",
@@ -28,6 +29,7 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.3.0",
     "react-native-swiper": "^1.6.0",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
